hphp/test/zend/good/ext-standard-file/get_current_user.php
<?php

var_dump(get_current_user("blah"));
var_dump(get_current_user());

echo "Done\n";
?>